--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -93,12 +93,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/integerPart_textView"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="66dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:textColor="?android:textColorPrimary"
                 android:textSize="18sp"
                 tools:text="1415926535" />
+            <!--marginBottom is 16dp + 50dp, because the height of
+            the ad is 50. (https://developers.google.com/admob/android/banner#banner_sizes)-->
 
             <ImageButton
                 android:id="@+id/openSettings_button"
@@ -119,12 +121,12 @@
     </ScrollView>
 
     <android.support.v7.widget.CardView
-        android:visibility="gone"
         android:id="@+id/adView_container"
-        android:layout_gravity="center_horizontal|bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="10dp"
+        android:visibility="gone"
         app:cardCornerRadius="4dp">
 
         <com.google.android.gms.ads.AdView
@@ -134,8 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
-        <!--TODO adUnitId-->
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" /> <!--TODO Replace with AdUnitID-->
         <!--TODO always test with test ads! Test ad unit id: ca-app-pub-3940256099942544/6300978111 -->
 
     </android.support.v7.widget.CardView>
