Migrate to AndroidX

--- a/app/src/main/res/layout/dialog_record.xml
+++ b/app/src/main/res/layout/dialog_record.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="10dp"
         android:textSize="16sp" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -22,6 +22,6 @@
             android:layout_height="wrap_content"
             android:hint="@string/record_holder_name"
             android:inputType="textCapWords" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
