--- a/app/src/main/res/layout/dialog_reference_settings.xml
+++ b/app/src/main/res/layout/dialog_reference_settings.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -15,9 +15,9 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:hint="@string/text_size_colon"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -27,5 +27,5 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:hint="@string/spacings"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
