--- a/app/src/main/res/layout-land/fragment_practise.xml
+++ b/app/src/main/res/layout-land/fragment_practise.xml
@@ -41,7 +41,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_keyboard_arrow_down_24dp" />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/settings_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="number" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/integerPart_textView"
