--- a/app/src/main/res/layout/activity_numbers.xml
+++ b/app/src/main/res/layout/activity_numbers.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context="com.teinproductions.tein.pitrainer.NumbersActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -20,7 +20,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
