--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -22,7 +22,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_keyboard_arrow_down_24dp" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/settings_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
                 android:layout_below="@id/rangeStop_textView"
                 android:inputType="number" />
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/statement_textView"
