--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/settings_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
                         android:layout_toStartOf="@id/closeSettings_button"
                         android:max="30" />
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/textSize_seekBar">
@@ -72,9 +72,9 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/spacings"
                             android:inputType="number" />
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/integerPart_textView"
@@ -120,7 +120,7 @@
         </RelativeLayout>
     </ScrollView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/adView_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -139,5 +139,5 @@
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111" /> <!--TODO Replace with AdUnitID-->
         <!--TODO always test with test ads! Test ad unit id: ca-app-pub-3940256099942544/6300978111 -->
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
