--- a/app/src/main/res/layout/nav_header_layout.xml
+++ b/app/src/main/res/layout/nav_header_layout.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="84dp"
+    android:gravity="center_vertical"
     android:background="?colorPrimaryDark">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:adjustViewBounds="true"
         android:layout_margin="16dp"
         android:contentDescription="@string/app_name"
         android:src="@mipmap/ic_launcher" />
@@ -15,7 +16,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="28sp" />
