--- a/app/src/main/res/layout-land/fragment_time.xml
+++ b/app/src/main/res/layout-land/fragment_time.xml
@@ -41,7 +41,7 @@
                     android:textSize="42sp"
                     tools:text="3." />
 
-                <TextView
+                <com.teinproductions.tein.pitrainer.records.StopWatch
                     android:id="@+id/timer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
