--- a/app/src/main/res/layout/list_item_record.xml
+++ b/app/src/main/res/layout/list_item_record.xml
@@ -1,52 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card-view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:minHeight="72dp"
-    card-view:cardCornerRadius="2dp"
-    card-view:cardElevation="4dp">
+    app:cardCornerRadius="2dp"
+    app:cardElevation="4dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/title_textView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="1. Tein" />
 
-            <TextView
-                android:id="@+id/title_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:textColor="?android:textColorPrimary"
-                android:textSize="18sp"
-                tools:text="1. Tein" />
+        <TextView
+            android:id="@+id/date_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorTertiary"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="5-9-2015" />
 
-            <TextView
-                android:id="@+id/date_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp"
-                tools:text="5-9-2015" />
+        <TextView
+            app:layout_constraintWidth_percent=".30"
+            android:id="@+id/digits_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorSecondary"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_textView"
+            tools:text="150 digits" />
 
-            <TextView
-                android:id="@+id/numbers_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/title_textView"
-                android:textSize="14sp"
-                tools:text="@string/record_card_description" />
+        <TextView
+            android:id="@+id/time_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorSecondary"
+            app:layout_constraintEnd_toStartOf="@id/dpm_textView"
+            app:layout_constraintStart_toEndOf="@+id/digits_textView"
+            app:layout_constraintTop_toBottomOf="@+id/title_textView"
+            tools:text="15 seconds" />
 
-        </RelativeLayout>
-    </LinearLayout>
+        <TextView
+            android:gravity="end"
+            app:layout_constraintWidth_percent=".40"
+            android:id="@+id/dpm_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorSecondary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_textView"
+            tools:text="100 per minute" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 
