--- a/app/src/main/res/layout-land/fragment_time.xml
+++ b/app/src/main/res/layout-land/fragment_time.xml
@@ -4,10 +4,10 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <com.teinproductions.tein.pitrainer.keyboard.Keyboard
         android:id="@+id/keyboard"
@@ -25,13 +25,14 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin">
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin">
 
             <LinearLayout
                 android:id="@+id/headerLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/integerPart_textView"
@@ -44,9 +45,10 @@
                 <com.teinproductions.tein.pitrainer.records.StopWatch
                     android:id="@+id/timer"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:textColor="?android:textColorPrimary"
                     android:textSize="38sp"
                     tools:text="00:31" />
 
@@ -81,9 +83,9 @@
                 android:id="@+id/done_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/input_editText"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_below="@id/input_editText"
                 android:background="@null"
                 android:contentDescription="@string/done"
                 android:padding="8dp"
@@ -94,8 +96,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/input_editText"
-                android:layout_toLeftOf="@id/done_button"
                 android:layout_toStartOf="@id/done_button"
+                android:layout_toLeftOf="@id/done_button"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/high_scores"
                 android:padding="8dp"
