--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
@@ -18,8 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:gravity="center_vertical"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/headerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -30,27 +30,57 @@
                     android:layout_height="wrap_content"
                     android:textColor="?android:textColorPrimary"
                     android:textSize="48sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/timerLayout"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="3." />
 
-                <com.teinproductions.tein.pitrainer.records.StopWatch
-                    android:id="@+id/timer"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="38sp"
-                    android:textColor="?android:textColorPrimary"
-                    tools:text="00:31.4" />
+                <LinearLayout
+                    android:id="@+id/timerLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/integerPart_textView"
+                    app:layout_constraintEnd_toStartOf="@id/restart_button">
+
+                    <com.teinproductions.tein.pitrainer.records.StopWatch
+                        android:id="@+id/timer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textColor="?android:textColorPrimary"
+                        android:textSize="38sp"
+                        tools:text="00:31.4" />
+
+                    <ImageButton
+                        android:contentDescription="@string/high_scores"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:id="@+id/highScores_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:src="@drawable/ic_crown_36dp" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/restart_button"
-                    android:layout_width="56sp"
-                    android:layout_height="56sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@null"
                     android:contentDescription="@string/restart"
                     android:scaleType="fitCenter"
+                    app:layout_constraintStart_toEndOf="@id/timerLayout"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:src="@drawable/ic_refresh_36dp" />
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
                 android:id="@+id/input_editText"
@@ -67,30 +97,6 @@
                 android:layout_below="@id/input_editText"
                 android:textSize="22sp"
                 tools:text="Digits: 0" />
-
-            <ImageButton
-                android:id="@+id/done_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/input_editText"
-                android:background="@null"
-                android:contentDescription="@string/done"
-                android:padding="8dp"
-                android:src="@drawable/ic_done_36dp" />
-
-            <ImageButton
-                android:id="@+id/high_scores_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/input_editText"
-                android:layout_toLeftOf="@id/done_button"
-                android:layout_toStartOf="@id/done_button"
-                android:background="@null"
-                android:contentDescription="@string/high_scores"
-                android:padding="8dp"
-                android:src="@drawable/ic_crown_36dp" />
         </RelativeLayout>
     </ScrollView>
 
